--- a/calc/manifest.json
+++ b/calc/manifest.json
@@ -19,6 +19,7 @@
     }	    
   ],
   "start_url": ".",
+  "scope": "/pwa/calc/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
