--- a/chat/manifest.json
+++ b/chat/manifest.json
@@ -19,6 +19,7 @@
     }	    
   ],
   "start_url": ".",
+  "scope": "/pwa/chat/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
