Change app name

--- a/calc/manifest.json
+++ b/calc/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "RPN Calc",
-  "name": "RPN Calc",
+  "short_name": "Cold Calc",
+  "name": "Cold Calculator",
   "icons": [
     {
       "src": "favicon.ico",
