--- a/calc/manifest.json
+++ b/calc/manifest.json
@@ -3,37 +3,19 @@
   "name": "Cold Calculator",
   "icons": [
     {
-      "src": "icon48.png",
-      "type": "image/png",
-      "sizes": "48x48"
-    },
-    {
-      "src": "icon72.png",
-      "type": "image/png",
-      "sizes": "72x72"
-    },
-    {
-      "src": "icon92.png",
-      "type": "image/png",
-      "sizes": "92x92"
-    },
-    {
-      "src": "icon144.png",
-      "type": "image/png",
-      "sizes": "144x144"
-    },
-    {
       "src": "icon192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "maskable any"
     },
     {
       "src": "icon512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "maskable any"
     }	    
   ],
-  "start_url": "index.html",
+  "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff",
